# HalpyBOT

./: .env.template  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  config_example.py  coverage.xml  halpybot.service  main.py  pylint.txt  pyproject.toml  requirements.txt  start.py
.github/workflows/: black.yml  codeql.yml
CLI/: backup_fact_update.py
CLI/BackupFactUpdater/: README.md  __main__.py  config_template.ini  requirements.txt
CLI/BackupFactUpdater/config/: config_template.ini
CLI/DSSAUpdater/: README.md  __main__.py  config_template.ini  requirements.txt
CLI/DSSAUpdater/config/: config_template.ini
CLI/DSSAUpdater/files/: files.txt
CLI/DSSAUpdater/src/: __init__.py  carrier.py  scraper.py
CLI/EDDBFormatter/: README.md  __main__.py
config/: config_template.ini
data/announcer/: announcer.json  announcer_example.json
data/edsm/: diversions.json  landmarks.json  long_range_diversions.json
data/facts/: backup_facts.json
data/help/: commands.json
data/languages/: iso639-1.json
docs/: fact_syntax.md
docs/api/: README.md  announcer.md  info.md  tail.md
halpybot/: __init__.py  __main__.py  halpyconfig.py
halpybot/commands/: __init__.py  bot_help.py  caseutils.py  debug.py  delayedboard.py  drill.py  edsm.py  fact.py  forcejoin.py  help.py  manual_case.py  misc.py  notify.py  ping.py  puppet.py  settings.py  shutdown.py  spansh.py  time.py  userinfo.py
halpybot/server/: __init__.py  auth.py  rank_change.py  server.py  server_announcer.py
modules/: checks.py  commandhandler.py  test.py
modules/announcer/: announcer.py  manual_case.py  message_builder.py
modules/botsettings/: settings.py
modules/datamodels/: user.py
modules/facts/: backup_facts.json  fact.py  fact_list.py  fact_management.py
modules/util/: checks.py  shutdown.py  utils.py
src/: __init__.py  commandhandler.py  halpybot.py
src/announcer/: announcer.py  manual_case.py  message_builder.py
src/botsettings/: settings.py
src/commands/: __init__.py  caseutils.py  delayedboard.py  drill.py  edsm.py  fact.py  forcejoin.py  help.py  manual_case.py  notify.py  ping.py  puppet.py  settings.py  shutdown.py  time.py  userinfo.py
src/commands/announcer/: __init__.py  manual_case.py
src/commands/bot_management/: __init__.py  puppet.py  settings.py  (+1 more)
src/configmanager/: edit.py
src/database/: __init__.py  database.py  delayedboard.py  fact.py  facts.py
src/delayedboard/: delayed.py
src/facts/: backup_facts.json  fact.py  fact_management.py
src/server/: __init__.py  auth.py  rank_change.py  server.py  server_announcer.py
src/util/: checks.py  shutdown.py  utils.py
tests/: __init__.py  conftest.py  edsm_expected_system.json  mock_edsm.py  mock_halpy.py  test_auth.py  test_bot.py  test_case.py  test_checks.py  test_commands.py  test_config.py  test_database.py  test_delayed.py  test_edsm.py  test_facts.py  test_logging.py  test_seals.py  test_server.py  test_utils.py
tests/fixtures/: __init__.py  mock_board.py  mock_edsm.py  mock_halpy.py
tests/test_data/: edsm_expected_cmdr.json  test_DB.db
(+14 files in other folders)
