[tool.poetry]
name = "halpybot"
version = "1.6.3"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pydle = {extras = ["sasl"], version = "^1.0.1"}
mysqlclient = "^2.1.1"
numpy = "^1.23.5"
boto3 = "^1.26.21"
aiohttp = "^3.8.3"
tweepy = "^4.12.1"
gitpython = "^3.1.29"
requests = "^2.28.1"
pyperclip = "^1.8.2"
tqdm = "^4.64.1"
attrs = "^22.1.0"
cattrs = "^22.2.0"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
sqlalchemy = "^1.4.45"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-httpserver = "^1.0.6"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
